ntfy/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
        - name: app 
          resources:
            requests:
              cpu: 150m
              memory: 150Mi
            limits:
              memory: 300Mi
              cpu:  200m
