ntfy/patches/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
      - "NTFY.EXAMPLE.COM"
      secretName: <MY_TLS_SECRET>
